# python-video-protector

./: .env.example  .gitignore  README.md  make.sh  manage.py  pyproject.toml
database/seeders/: media_seeder.py
docker/: Dockerfile  docker-compose.override.yml.prod  docker-compose.yml  docker-composer.override.yml.prod
docker/nginx/: my_custom_proxy_settings.conf
docker/nginx/vhost/: .gitignore  mydomain.com
protectapp/: asgi.py  context_processor.py  settings.py  urls.py  wsgi.py
scripts/: production_deployment.sh
src/age_verification/templates/: become_creator.html  country_restricted.html  creator_agreement.html
src/authentication/: signals.py
src/core/: utils.py  views.py
src/core/templates/: contact.html  home.html  landing_page.html  legal_documents.html
src/core/templatetags/: text_filters.py
src/media/: enums.py  models.py  tasks.py  urls.py  utils.py  views.py
src/media/migrations/: 0001_initial.py  0003_media_unlock_price.py
src/media/models/: __init__.py  hashtag.py  media.py  media_hashtag.py  unlock.py  views.py
src/media/templates/: my_content.html  (+2 more)
src/notification/: urls.py  views.py
src/payment/: admin.py  apps.py  enums.py  exceptions.py  models.py  tasks.py  urls.py  utils.py  views.py
src/storage/: apps.py  init_storage.py  tasks.py  utils.py
src/user/: tasks.py
static/css/: base.css
templates/components/: 18_plus_popup.html  balance_popup.html  bottom_navigation.html  install_app.html  push_notifications.html
templates/core/: contact.html  layout.html
templates/emails/: layout.html  test_email.html
(+95 files in other folders)
