[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Dario",email = "dario@mail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django-environ (>=0.12.0,<0.13.0)",
    "b2sdk (>=2.10.1,<3.0.0)",
    "bugsnag (>=4.8.0,<5.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "django (>=5.2.8,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
